--- a/rhq-plugin/pom.xml
+++ b/rhq-plugin/pom.xml
@@ -31,6 +31,18 @@
                <groupId>hibernate</groupId>
                <artifactId>hibernate3</artifactId>
             </exclusion>
+            <exclusion>
+               <groupId>com.sun.xml.bind</groupId>
+               <artifactId>jaxb-impl</artifactId>
+            </exclusion>
+            <exclusion>
+               <groupId>javax.xml.bind</groupId>
+               <artifactId>jaxb-api</artifactId>
+            </exclusion>
+            <exclusion>
+               <groupId>net.sourceforge.cobertura</groupId>
+               <artifactId>cobertura</artifactId>
+            </exclusion>
          </exclusions>
       </dependency>
       <dependency>
@@ -41,6 +53,14 @@
                <groupId>com.sun.xml.bind</groupId>
                <artifactId>jaxb-impl</artifactId>
             </exclusion>
+            <exclusion>
+               <groupId>javax.xml.bind</groupId>
+               <artifactId>jaxb-api</artifactId>
+            </exclusion>
+            <exclusion>
+               <groupId>net.sourceforge.cobertura</groupId>
+               <artifactId>cobertura</artifactId>
+            </exclusion>
          </exclusions>
          <scope>provided</scope>
       </dependency>
@@ -49,6 +69,39 @@
          <groupId>org.rhq</groupId>
          <artifactId>rhq-jmx-plugin</artifactId>
          <scope>provided</scope>
+         <exclusions>
+            <exclusion>
+               <groupId>com.sun.xml.bind</groupId>
+               <artifactId>jaxb-impl</artifactId>
+            </exclusion>
+            <exclusion>
+               <groupId>javax.xml.bind</groupId>
+               <artifactId>jaxb-api</artifactId>
+            </exclusion>
+            <exclusion>
+               <groupId>net.sourceforge.cobertura</groupId>
+               <artifactId>cobertura</artifactId>
+            </exclusion>
+         </exclusions>
+      </dependency>
+
+      <dependency>
+         <groupId>org.rhq</groupId>
+         <artifactId>rhq-core-native-system</artifactId>
+         <exclusions>
+            <exclusion>
+               <groupId>org.hyperic</groupId>
+               <artifactId>sigar</artifactId>
+            </exclusion>
+            <exclusion>
+               <groupId>org.hyperic</groupId>
+               <artifactId>sigar-dist</artifactId>
+            </exclusion>
+            <exclusion>
+               <groupId>net.sourceforge.cobertura</groupId>
+               <artifactId>cobertura</artifactId>
+            </exclusion>
+         </exclusions>
       </dependency>
 
       <dependency>
@@ -63,7 +116,12 @@
          <scope>provided</scope>
       </dependency>
 
-      
+      <dependency>
+         <groupId>org.hibernate.javax.persistence</groupId>
+         <artifactId>hibernate-jpa-2.0-api</artifactId>
+         <scope>provided</scope>
+      </dependency>
+
       <dependency>
          <groupId>commons-collections</groupId>
          <artifactId>commons-collections</artifactId>
@@ -92,6 +150,12 @@
       <dependency>
          <groupId>${project.groupId}</groupId>
          <artifactId>infinispan-query</artifactId>
+         <scope>provided</scope>
+      </dependency>
+      
+      <dependency>
+         <groupId>${project.groupId}</groupId>
+         <artifactId>infinispan-lucene-directory</artifactId>
          <scope>provided</scope>
       </dependency>
 
