--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -53,21 +53,22 @@
 
    <properties>
       
-      <version.protostream>1.0.0.CR1</version.protostream>
-      <version.aesh>0.33.7</version.aesh>
+      <version.protostream>1.0.0.CR1-redhat-1</version.protostream>
+      <version.aesh>0.33.7.redhat-2</version.aesh>
       <version.antlr>3.4</version.antlr>
-      <version.gnu.getopt>1.0.13</version.gnu.getopt>
-      <version.hibernate.search>4.4.0.Final</version.hibernate.search>
-      <version.jboss.marshalling>1.4.2.Final</version.jboss.marshalling>
-      <version.jboss.logging>3.1.2.GA</version.jboss.logging>
-      <version.jgroups>3.4.1.Final</version.jgroups>
+      <version.gnu.getopt>1.0.13-redhat-2</version.gnu.getopt>
+      <version.hibernate.search>4.4.0.Final-redhat-3</version.hibernate.search>
+      <version.jansi>1.9.redhat-3</version.jansi>
+      <version.jboss.marshalling>1.4.2.Final-redhat-2</version.jboss.marshalling>
+      <version.jboss.logging>3.1.2.GA-redhat-1</version.jboss.logging>
+      <version.jgroups>3.4.1.Final-redhat-2</version.jgroups>
       <version.json>20090211</version.json>
-      <version.jta>1.0.1.Final</version.jta>
-      <version.netty>3.6.6.Final</version.netty>
-      <version.osgi>4.3.0</version.osgi>
-      <version.rhq>4.4.0</version.rhq>
-      <version.scala>2.10.2</version.scala>
-      <version.xstream>1.4.1</version.xstream>
+      <version.jta>1.0.1.Final-redhat-2</version.jta>
+      <version.netty>3.6.6.Final-redhat-1</version.netty>
+      <version.osgi>4.2.0-redhat-3</version.osgi>
+      <version.rhq>4.4.0.JON310GA</version.rhq>
+      <version.scala>2.10.2.redhat-1</version.scala>
+      <version.xstream>1.4.1-redhat-2</version.xstream>
    </properties>
 
    <distributionManagement>
@@ -113,6 +114,16 @@
          </dependency>
          <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>infinispan-cli-client</artifactId>
+            <version>${project.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>infinispan-cli-server</artifactId>
+            <version>${project.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>infinispan-client-hotrod</artifactId>
             <version>${project.version}</version>
          </dependency>
@@ -144,11 +155,6 @@
          <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>infinispan-lucene-v3</artifactId>
-            <version>${project.version}</version>
-         </dependency>
-         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>infinispan-lucene-v4</artifactId>
             <version>${project.version}</version>
          </dependency>
          <dependency>
@@ -219,6 +225,11 @@
             <version>${version.antlr}</version>
          </dependency>
          <dependency>
+            <groupId>org.fusesource.jansi</groupId>
+            <artifactId>jansi</artifactId>
+            <version>${version.jansi}</version>
+         </dependency>
+         <dependency>
             <groupId>org.jboss.spec.javax.transaction</groupId>
             <artifactId>jboss-transaction-api_1.1_spec</artifactId>
             <version>${version.jta}</version>
@@ -263,6 +274,21 @@
             <groupId>org.rhq</groupId>
             <artifactId>rhq-core-domain</artifactId>
             <version>${version.rhq}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.rhq</groupId>
+            <artifactId>rhq-core-native-system</artifactId>
+            <version>${version.rhq}</version>
+            <exclusions>
+               <exclusion>
+                  <groupId>org.hyperic</groupId>
+                  <artifactId>sigar</artifactId>
+               </exclusion>
+               <exclusion>
+                  <groupId>org.hyperic</groupId>
+                  <artifactId>sigar-dist</artifactId>
+               </exclusion>
+            </exclusions>
          </dependency>
          <dependency>
             <groupId>org.rhq</groupId>
