--- a/integrationtests/compatibility-mode-it/pom.xml
+++ b/integrationtests/compatibility-mode-it/pom.xml
@@ -80,7 +80,7 @@
       </dependency>
       <dependency>
          <groupId>spy</groupId>
-         <artifactId>memcached</artifactId>
+         <artifactId>spymemcached</artifactId>
          <scope>test</scope>
       </dependency>
    </dependencies>
