--- a/server/integration/testsuite/pom.xml
+++ b/server/integration/testsuite/pom.xml
@@ -41,6 +41,10 @@
             <artifactId>infinispan-arquillian-impl</artifactId>
             <exclusions>
                 <exclusion>
+                    <groupId>org.infinispan</groupId>
+                    <artifactId>infinispan-core</artifactId>
+                </exclusion>
+                <exclusion>
                     <groupId>org.jboss.logmanager</groupId>
                     <artifactId>jboss-logmanager</artifactId>
                 </exclusion>
@@ -66,6 +70,12 @@
                     <artifactId>jboss-logmanager</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.infinispan</groupId>
+            <artifactId>infinispan-core</artifactId>
+            <classifier>tests</classifier>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>net.jcip</groupId>
