--- a/server/memcached/pom.xml
+++ b/server/memcached/pom.xml
@@ -27,8 +27,14 @@
       </dependency>
       <dependency>
          <groupId>spy</groupId>
-         <artifactId>memcached</artifactId>
+         <artifactId>spymemcached</artifactId>
          <scope>test</scope>
+         <exclusions>
+            <exclusion>
+               <groupId>org.springframework</groupId>
+               <artifactId>spring-beans</artifactId>
+            </exclusion>
+         </exclusions>
       </dependency>
    </dependencies>
 
