--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -58,7 +58,7 @@
       <version.antlr>3.4</version.antlr>
       <version.gnu.getopt>1.0.13</version.gnu.getopt>
       <version.hibernate.search>4.4.0.Final</version.hibernate.search>
-      <version.jboss.marshalling>1.3.18.GA</version.jboss.marshalling>
+      <version.jboss.marshalling>1.4.2.Final</version.jboss.marshalling>
       <version.jboss.logging>3.1.2.GA</version.jboss.logging>
       <version.jgroups>3.4.1.Final</version.jgroups>
       <version.json>20090211</version.json>
