--- a/server/integration/versions/pom.xml
+++ b/server/integration/versions/pom.xml
@@ -22,19 +22,18 @@
       <product.version>${project.version}</product.version>
       <product.name>infinispan-server</product.name>
 
-      
       <version.ant-contrib>1.0b3</version.ant-contrib>
       <version.com.github.relaxng.relaxngDatatype>2011.1-redhat-6</version.com.github.relaxng.relaxngDatatype>
       <version.commons.logging>1.1.1-redhat-2</version.commons.logging>
       <version.net.jcip.annotations>1.0.redhat-6</version.net.jcip.annotations>
       <version.org.jboss.as>7.3.2.Final-redhat-2</version.org.jboss.as>
-      <version.org.jboss.as.arquillian>7.2.0.Final</version.org.jboss.as.arquillian>
+      <version.org.jboss.as.arquillian>7.3.2.Final-redhat-2</version.org.jboss.as.arquillian>
       <version.org.jboss.jandex>1.0.3.Final-redhat-2</version.org.jboss.jandex>
       <version.org.jboss.jbossts.jbossjts>4.17.15.Final-redhat-4</version.org.jboss.jbossts.jbossjts>
       <version.org.jboss.spec>3.0.2.Final-redhat-8</version.org.jboss.spec>
       <version.junit>4.11</version.junit>
       <version.org.infinispan>${project.version}</version.org.infinispan>
-      <version.org.infinispan.arquillian.container>1.1.0.Alpha1</version.org.infinispan.arquillian.container>
+      <version.org.infinispan.arquillian.container>1.1.0.Alpha2</version.org.infinispan.arquillian.container>
       <version.org.iq80.leveldb>0.6</version.org.iq80.leveldb>
       <version.org.slf4j>1.7.2.redhat-2</version.org.slf4j>
       <version.org.xerial.snappy>1.0.5</version.org.xerial.snappy>
@@ -43,6 +42,11 @@
       <version.http.client>4.3</version.http.client>
       <version.org.picketbox>4.0.19.SP4-redhat-1</version.org.picketbox>
       <version.xpp3>1.1.4c-redhat-2</version.xpp3>
+      <version.pax.url>1.3.7</version.pax.url>
+      <version.karaf>2.3.3</version.karaf>
+      <version.pax.exam>3.4.0</version.pax.exam>
+      <version.javax.inject>1</version.javax.inject>
+      <version.h2.database>1.3.168.redhat-4</version.h2.database>
       <relocations />
 
    </properties>
@@ -139,7 +143,7 @@
             <scope>test</scope>
             <classifier>tests</classifier>
          </dependency>
-         
+
          <dependency>
             <groupId>org.jboss.as</groupId>
             <artifactId>jboss-as-subsystem-test</artifactId>
@@ -172,6 +176,14 @@
             <groupId>org.infinispan</groupId>
             <artifactId>infinispan-core</artifactId>
             <version>${version.org.infinispan}</version>
+         </dependency>
+         
+         <dependency>
+            <groupId>org.infinispan</groupId>
+            <artifactId>infinispan-core</artifactId>
+            <version>${version.org.infinispan}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
          </dependency>
 
          <dependency>
@@ -311,6 +323,10 @@
             <version>${version.org.infinispan.arquillian.container}</version>
             <exclusions>
                <exclusion>
+                  <groupId>org.infinispan</groupId>
+                  <artifactId>infinispan-core</artifactId>
+               </exclusion>
+               <exclusion>
                   <groupId>org.jboss.jbossts</groupId>
                   <artifactId>jbossjta</artifactId>
                </exclusion>
@@ -318,7 +334,7 @@
                   <groupId>org.jboss.remoting3</groupId>
                   <artifactId>remoting-jmx</artifactId>
                </exclusion>
-            </exclusions>            
+            </exclusions>
          </dependency>
 
          <dependency>
@@ -408,6 +424,55 @@
             <version>${version.xpp3}</version>
          </dependency>
 
+         <dependency>
+            <groupId>org.apache.karaf</groupId>
+            <artifactId>apache-karaf</artifactId>
+            <version>${version.karaf}</version>
+            <type>zip</type>
+            <scope>test</scope>
+         </dependency>
+
+         <dependency>
+            <groupId>org.ops4j.pax.exam</groupId>
+            <artifactId>pax-exam-container-karaf</artifactId>
+            <version>${version.pax.exam}</version>
+            <scope>test</scope>
+         </dependency>
+
+         <dependency>
+            <groupId>org.ops4j.pax.exam</groupId>
+            <artifactId>pax-exam-junit4</artifactId>
+            <version>${version.pax.exam}</version>
+            <scope>test</scope>
+         </dependency>
+
+         <dependency>
+            <groupId>org.ops4j.pax.exam</groupId>
+            <artifactId>pax-exam</artifactId>
+            <version>${version.pax.exam}</version>
+            <scope>test</scope>
+         </dependency>
+
+         <dependency>
+            <groupId>org.ops4j.pax.exam</groupId>
+            <artifactId>pax-exam-inject</artifactId>
+            <version>${version.pax.exam}</version>
+            <scope>test</scope>
+         </dependency>
+
+         <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>${version.javax.inject}</version>
+            <scope>test</scope>
+         </dependency>
+
+         <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+            <version>${version.h2.database}</version>
+         </dependency>
       </dependencies>
 
    </dependencyManagement>
