--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -60,8 +60,9 @@
    <properties>
       <version.protostream>1.0.0.Final-redhat-1</version.protostream>
       <version.aesh>0.33.8.redhat-1</version.aesh>
-      <version.antlr>3.4</version.antlr>
       <version.commons.pool>1.6.redhat-6</version.commons.pool>
+      <version.protobuf>2.5.0</version.protobuf>
+      <version.antlr>3.4</version.antlr>
       <version.gnu.getopt>1.0.13.redhat-4</version.gnu.getopt>
       <version.hibernate.search>4.4.0.Final-redhat-3</version.hibernate.search>
       <version.jansi>1.9.redhat-3</version.jansi>
