--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -2,14 +2,12 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <parent>
-      <groupId>org.jboss</groupId>
-      <artifactId>jboss-parent</artifactId>
-      <version>10-redhat-2</version>
-      <relativePath />
-   </parent>
-   <groupId>org.infinispan</groupId>
-   <artifactId>infinispan-parent</artifactId>
+      <groupId>org.infinispan</groupId>
+      <artifactId>infinispan-bom</artifactId>
       <version>6.1.0-redhat-SNAPSHOT</version>
+      <relativePath>../bom/pom.xml</relativePath>
+   </parent>
+   <artifactId>infinispan-parent</artifactId>
    <packaging>pom</packaging>
    <name>Infinispan Common Parent</name>
    <description>Infinispan common parent POM module</description>
@@ -139,13 +137,6 @@
    
    <dependencyManagement>
       <dependencies>
-         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>infinispan-bom</artifactId>
-            <version>${project.version}</version>
-            <type>pom</type>
-            <scope>import</scope>
-         </dependency>
          <dependency>
             <groupId>org.jboss.component.management</groupId>
             <artifactId>jboss-dependency-management-eap</artifactId>
