--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -63,7 +63,7 @@
       <version.jgroups>3.4.3.Final-redhat-1</version.jgroups>
       <version.json>20090211</version.json>
       <version.jta>1.0.1.Final-redhat-2</version.jta>
-      <version.netty>3.6.6.Final-redhat-1</version.netty>
+      <version.netty>4.0.17.Final-redhat-1</version.netty>
       <version.osgi>4.2.0-redhat-3</version.osgi>
       <version.rhq>4.4.0.JON310GA</version.rhq>
       <version.scala>2.10.2.redhat-1</version.scala>
@@ -335,7 +335,7 @@
          
          <dependency>
             <groupId>io.netty</groupId>
-            <artifactId>netty</artifactId>
+            <artifactId>netty-all</artifactId>
             <version>${version.netty}</version>
          </dependency>
          <dependency>
