--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -9,7 +9,7 @@
    </parent>
    <groupId>org.infinispan</groupId>
    <artifactId>infinispan-parent</artifactId>
-      <version>6.0.1-SNAPSHOT</version>
+      <version>6.0.3-redhat-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Infinispan Common Parent</name>
    <description>Infinispan common parent POM module</description>
