--- a/server/hotrod/pom.xml
+++ b/server/hotrod/pom.xml
@@ -19,6 +19,10 @@
          <artifactId>infinispan-server-core</artifactId>
       </dependency>
       <dependency>
+         <groupId>io.netty</groupId>
+         <artifactId>netty-all</artifactId>
+      </dependency>
+      <dependency>
          <groupId>${project.groupId}</groupId>
          <artifactId>infinispan-server-core</artifactId>
          <type>test-jar</type>
