ISPN-3850 OsgiClassLoader, removed Configuration#classLoader, flattened FileLookup concept
ISPN-800 OSGi corrections provided by camel-infinispan-osgi

ISPN-3850 made OsgiClassLoader singleton, held Bundle references are
weak

ISPN-800 corrected compile issues in other modules, cleanup, formatting

ISPN-3849 introduced OSGi service loading, improved ServiceFinder,
replaced all direct uses of ServiceLoader

ISPN-3850 check for ACTIVE Bundle state

ISPN-800 dynamic OSGi manifest package versions

ISPN-3849 if no CLs given to ServiceFinder then attempt ServiceLoad without one, corrected CodecRegistry's use of ServiceFinder

ISPN-800 cleaned up manifest imports of internal packages

ISPN-3850 corrected repeated calls to WeakReference#get

ISPN-800 corrected a few uses of ${project.version}

ISPN-3849 FileLookup-related compile errors

ISPN-800 fix test failures

* don't assume the OSGi classes will be available at runtime
* define org.infinispan.commons as a dependency of org.jboss.as.clustering.jgroups

ISPN-4232 HotRod client cannot be installed in Karaf due to missing dependency on infinispan-core

Make infinispan-commons a standalone bundle.

ISPN-4234 OSGi core bundle - missing javax.security.* dependency

ISPN-4241 Distexec cannot clone tasks for distributed executions in Karaf

Changed the OSGi headers for infinispan-commons to include DynamicImport-Package=* as the marshaller needs to be able to load classes from client bundles.

fix

ISPN-4332 Add the possibility to run tests with Geronimo Transaction Manager

* run the tests with -Dinfinispan.test.jta.tm=geronimotm

Conflicts:
	core/src/test/java/org/infinispan/test/fwk/TestCacheManagerFactory.java
	parent/pom.xml

ISPN-4332 If we catch an exception during commit, we initiate a rollback (TransactionCoordinator.handleCommitRollback) and consequently signal this unilateral decision to the TM with an XA_HEURRB exception.
Narayana throws this to the user as a RollbackException whilst Geronimo throws it as an Heuri

--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -302,7 +302,12 @@
             <artifactId>org.osgi.core</artifactId>
             <version>${version.osgi}</version>
          </dependency>
-         
+         <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.compendium</artifactId>
+            <version>${version.osgi}</version>
+         </dependency>
+         <!-- Infinispan RHQ module dependencies -->
          <dependency>
             <groupId>org.rhq</groupId>
             <artifactId>rhq-core-domain</artifactId>
