--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -107,12 +107,14 @@
       <version.commons.math>2.2</version.commons.math>
       <version.freemarker>2.3.19-redhat-1</version.freemarker>
       <version.guava>13.0.1-redhat-1</version.guava>
+      <version.geronimo.tm>3.1.1</version.geronimo.tm>
       <version.h2.driver>1.3.168-redhat-2</version.h2.driver>
       <version.hibernate.core>4.2.12.Final-redhat-1</version.hibernate.core>
       <version.hibernate.entitymanager>${version.hibernate.core}</version.hibernate.entitymanager>
       <version.hibernate.hql.parser>1.0.0.CR1-redhat-1</version.hibernate.hql.parser>
       <version.hibernate.javax.persistence>1.0.1.Final-redhat-2</version.hibernate.javax.persistence>
       <version.httpclient>4.2.1-redhat-1</version.httpclient>
+      <version.howl>1.0.1-1</version.howl>
       <version.jackson>1.9.9-redhat-2</version.jackson>
       <version.javassist>3.18.1-GA-redhat-1</version.javassist>
       <version.javax.cache>1.0.0-PFD</version.javax.cache>
@@ -139,7 +141,7 @@
       <version.resteasy>2.3.6.Final-redhat-1</version.resteasy>
       <version.org.picketbox>4.0.19.SP4-redhat-1</version.org.picketbox>
       <version.shrinkwrapResolver>2.0.0</version.shrinkwrapResolver>
-      <version.slf4j>1.7.2-redhat-1</version.slf4j>
+      <version.slf4j>1.7.5</version.slf4j>
       <version.spymemcached>2.8.0</version.spymemcached>
       <version.stringtemplate>3.2.1-redhat-1</version.stringtemplate>
       <version.testng>6.8</version.testng>
@@ -492,6 +494,12 @@
          </dependency>
          <dependency>
             <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${version.slf4j}</version>
+            <scope>test</scope>
+         </dependency>
+         <dependency>
+            <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk14</artifactId>
             <version>${version.slf4j}</version>
             <scope>test</scope>
@@ -748,6 +756,23 @@
          <artifactId>jboss-logging-processor</artifactId>
          <version>${version.jboss.logging.jboss-logging-processor}</version>
          <scope>provided</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.geronimo.components</groupId>
+         <artifactId>geronimo-transaction</artifactId>
+         <version>${version.geronimo.tm}</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.objectweb.howl</groupId>
+         <artifactId>howl</artifactId>
+         <version>${version.howl}</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.slf4j</groupId>
+         <artifactId>slf4j-api</artifactId>
+         <scope>test</scope>
       </dependency>
       <dependency>
           <groupId>org.slf4j</groupId>
