BZ1082463 ISPN-4005 Upgrade to protostream 1.0.0.Final

--- a/query-dsl/pom.xml
+++ b/query-dsl/pom.xml
@@ -29,7 +29,7 @@
             <configuration>
                <instructions>
                   <Export-Package>
-                     ${project.groupId}.query-dsl.*;version=${project.version};-split-package:=error
+                     ${project.groupId}.query.dsl.*;version=${project.version};-split-package:=error
                   </Export-Package>
                </instructions>
             </configuration>
