--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -58,7 +58,7 @@
    </issueManagement>
 
    <properties>
-      <version.protostream>1.0.0.CR1-redhat-1</version.protostream>
+      <version.protostream>1.0.0.Final-redhat-1</version.protostream>
       <version.aesh>0.33.8.redhat-1</version.aesh>
       <version.antlr>3.4</version.antlr>
       <version.gnu.getopt>1.0.13.redhat-4</version.gnu.getopt>
