--- a/server/integration/versions/pom.xml
+++ b/server/integration/versions/pom.xml
@@ -5,7 +5,7 @@
    <parent>
       <groupId>org.jboss</groupId>
       <artifactId>jboss-parent</artifactId>
-      <version>11</version>
+      <version>11-redhat-1</version>
       <relativePath />
    </parent>
 
@@ -27,7 +27,7 @@
       <version.com.github.relaxng.relaxngDatatype>2011.1-redhat-6</version.com.github.relaxng.relaxngDatatype>
       <version.commons.logging>1.1.1-redhat-2</version.commons.logging>
       <version.net.jcip.annotations>1.0.redhat-6</version.net.jcip.annotations>
-      <version.org.jboss.as>7.3.2.Final-redhat-1</version.org.jboss.as>
+      <version.org.jboss.as>7.3.2.Final-redhat-2</version.org.jboss.as>
       <version.org.jboss.as.arquillian>7.2.0.Final</version.org.jboss.as.arquillian>
       <version.org.jboss.jandex>1.0.3.Final-redhat-2</version.org.jboss.jandex>
       <version.org.jboss.jbossts.jbossjts>4.17.15.Final-redhat-4</version.org.jboss.jbossts.jbossjts>
