--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -4,7 +4,7 @@
    <parent>
       <groupId>org.jboss</groupId>
       <artifactId>jboss-parent</artifactId>
-      <version>10-redhat-2</version>
+      <version>11</version>
       <relativePath />
    </parent>
    <groupId>org.infinispan</groupId>
