--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
                               <artifactId>infinispan-tools</artifactId>
                               <version>${project.version}</version>
                            </docletArtifact>
+                           <doctitle>JBoss Data Grid 6.3.0 API</doctitle>
                            <quiet>true</quiet>
                            <!-- In case anyone needs to trace javadoc issues
                            <additionalJOption>-J-Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=y</additionalJOption>
