--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -156,6 +156,15 @@
       <version.maven.invoker.plugin>1.5</version.maven.invoker.plugin>
       <version.maven.scala>2.15.2-redhat-1</version.maven.scala>
       <version.maven.surefire>2.14.1</version.maven.surefire>
+      <version.maven.invoker>1.8</version.maven.invoker>
+      <version.jacoco>0.5.10.201208310627</version.jacoco>
+      <version.asm>3.3.1</version.asm>
+      <version.pax.url>1.3.7</version.pax.url>
+      <version.karaf>2.3.3</version.karaf>
+      <version.pax.exam>3.4.0</version.pax.exam>
+      <reportTitle>Infinispan JaCoCo Report</reportTitle>
+      <dir.ispn>../</dir.ispn>
+      <dir.report>../jacoco-html</dir.report>
    </properties>
    
    <dependencyManagement>
@@ -709,6 +718,64 @@
             <version>${version.org.picketbox}</version>
             <scope>test</scope>
          </dependency>
+         <dependency>
+            <groupId>org.apache.karaf</groupId>
+            <artifactId>apache-karaf</artifactId>
+            <version>${version.karaf}</version>
+            <type>zip</type>
+            <scope>test</scope>
+            <exclusions>
+               <exclusion>
+                  <groupId>org.ops4j.pax.logging</groupId>
+                  <artifactId>pax-logging-api</artifactId>
+               </exclusion>
+               <exclusion>
+                  <groupId>org.ops4j.pax.logging</groupId>
+                  <artifactId>pax-logging-service</artifactId>
+               </exclusion>
+            </exclusions>
+         </dependency>
+         <dependency>
+            <groupId>org.ops4j.pax.exam</groupId>
+            <artifactId>pax-exam-container-karaf</artifactId>
+            <version>${version.pax.exam}</version>
+            <scope>test</scope>
+         </dependency>
+         <dependency>
+            <groupId>org.ops4j.pax.exam</groupId>
+            <artifactId>pax-exam</artifactId>
+            <version>${version.pax.exam}</version>
+            <scope>test</scope>
+         </dependency>
+         <dependency>
+            <groupId>org.ops4j.pax.exam</groupId>
+            <artifactId>pax-exam-junit4</artifactId>
+            <version>${version.pax.exam}</version>
+            <scope>test</scope>
+         </dependency>
+         <dependency>
+            <groupId>org.ops4j.pax.exam</groupId>
+            <artifactId>pax-exam-inject</artifactId>
+            <version>${version.pax.exam}</version>
+            <scope>test</scope>
+         </dependency>
+         <dependency>
+            <groupId>org.xerial.snappy</groupId>
+            <artifactId>snappy-java</artifactId>
+            <version>${version.snappy}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.apache.geronimo.components</groupId>
+            <artifactId>geronimo-transaction</artifactId>
+            <version>${version.geronimo.tm}</version>
+            <scope>test</scope>
+         </dependency>
+         <dependency>
+            <groupId>org.objectweb.howl</groupId>
+            <artifactId>howl</artifactId>
+            <version>${version.howl}</version>
+            <scope>test</scope>
+         </dependency>
       </dependencies>
    </dependencyManagement>
    <dependencies>
@@ -756,18 +823,6 @@
          <artifactId>jboss-logging-processor</artifactId>
          <version>${version.jboss.logging.jboss-logging-processor}</version>
          <scope>provided</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.apache.geronimo.components</groupId>
-         <artifactId>geronimo-transaction</artifactId>
-         <version>${version.geronimo.tm}</version>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.objectweb.howl</groupId>
-         <artifactId>howl</artifactId>
-         <version>${version.howl}</version>
-         <scope>test</scope>
       </dependency>
       <dependency>
          <groupId>org.slf4j</groupId>
@@ -845,6 +900,11 @@
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>${version.maven.dependency.plugin}</version>
+            </plugin>
+            <plugin>
+               <groupId>org.apache.servicemix.tooling</groupId>
+               <artifactId>depends-maven-plugin</artifactId>
+               <version>1.2</version>
             </plugin>
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
