--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
       <module>compatibility52x/custom52x-store</module>
       <module>integrationtests/security-it</module>
       <module>integrationtests/security-manager-it</module>
+      <module>integrationtests/osgi</module>
       <module>server/integration</module>
       <module>integrationtests/as-integration</module>
       <module>integrationtests/as-integration-remote-client</module>
