--- a/server/integration/infinispan/pom.xml
+++ b/server/integration/infinispan/pom.xml
@@ -77,6 +77,10 @@
             <artifactId>infinispan-remote-query-server</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.infinispan</groupId>
+            <artifactId>infinispan-cli-server</artifactId>
+        </dependency>
+        <dependency>
             <groupId>net.jcip</groupId>
             <artifactId>jcip-annotations</artifactId>
         </dependency>
