--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -102,6 +102,11 @@
          </dependency>
          <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>infinispan-cachestore-jpa</artifactId>
+            <version>${project.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>infinispan-cachestore-remote</artifactId>
             <version>${project.version}</version>
          </dependency>
