--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -107,7 +107,7 @@
       <version.freemarker>2.3.19-redhat-1</version.freemarker>
       <version.guava>13.0.1-redhat-1</version.guava>
       <version.h2.driver>1.3.168-redhat-2</version.h2.driver>
-      <version.hibernate.core>4.2.7.SP1-redhat-3</version.hibernate.core>
+      <version.hibernate.core>4.2.12.Final-redhat-1</version.hibernate.core>
       <version.hibernate.entitymanager>${version.hibernate.core}</version.hibernate.entitymanager>
       <version.hibernate.hql.parser>1.0.0.Alpha5-redhat-1</version.hibernate.hql.parser>
       <version.hibernate.javax.persistence>1.0.1.Final-redhat-2</version.hibernate.javax.persistence>
