BZ1079883 ISPN-4147 CLI subsystem descriptor

--- a/server/integration/infinispan/src/main/resources/org/jboss/as/clustering/infinispan/subsystem/LocalDescriptions.properties
+++ b/server/integration/infinispan/src/main/resources/org/jboss/as/clustering/infinispan/subsystem/LocalDescriptions.properties
@@ -38,6 +38,7 @@ infinispan.cache-container.coordinator-address=The logical address of the cluste
 infinispan.cache-container.local-address=The local address of the node. May return null if the cache manager is not started.
 infinispan.cache-container.cluster-name=The name of the cluster this node belongs to. May return null if the cache manager is not started.
 # transport resource
+infinispan.cache-container.cli-interpreter=CLI interpreter
 infinispan.transport=The description of the transport used by this cache container
 infinispan.transport.add=Add the transport to the cache container
 infinispan.transport.remove=Remove the transport from the cache container
@@ -397,3 +398,5 @@ infinispan.cache.security.authorization.add=Adds authorization configuration to 
 infinispan.cache.security.authorization.remove=Removes authorization configuration from a cache
 infinispan.cache.security.authorization.enabled=Enables authorization checks for a cache
 infinispan.cache.security.authorization.roles=The list of roles which are allowed to access a cache
+
+
